--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
     color: white;
 }
 body {
-    background: #f2f2f2;
+    background: black;
 }
 nav {
-    background: #1b1b1b;
+    background: rgba(63, 3, 3, 0.596);
     width: 100%;
 }
 nav:after {
@@ -25,7 +25,7 @@ nav ul {
 }
 nav ul li {
     display: inline-block;
-    margin: 0 5px;
+    margin: 0 30px;
     color: #1b1b1b;
 }
 nav ul li a {
@@ -42,7 +42,7 @@ nav ul li a {
     border-bottom: 1px solid #33ffff;
 } */
 .clickable:hover {
-    border-radius: 5px;
+    border-radius: 50px;
     border-bottom: 1px solid #33ffff;
     cursor: pointer;
 }
@@ -68,7 +68,7 @@ nav ul ul li {
 }
 
 .range-input {
-    background: teal;
+    background:rgb(14, 90, 100);
     -webkit-appearance: none;
     height: 2px;
     outline: none;
@@ -91,3 +91,4 @@ nav ul ul li {
     background: #33ffff;
     cursor: pointer;
 }
+
